# tcmb-mcp-server

./: .gitignore  Dockerfile  PROJE_DOKUMANTASYONU.md  README.md  pyproject.toml  smithery.json  smithery.yaml
src/tcmb_mcp_server/: __init__.py  server.py
