[project]
name = "tcmb-mcp-server"
version = "0.1.0"
description = "MCP server for Turkish Central Bank (TCMB) exchange rates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
tcmb-mcp-server = "tcmb_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
